[project]
name = "hilbert-bytes"
version = "0.4.0"
description = "A python library for converting between d-dimensional points and indices on a hilbert curve"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["numba>=0.61.0", "numpy>=2.1.3"]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "myst-parser>=4.0.0",
    "nbformat>=5.10.4",
    "numpy-hilbert-curve>=1.0.1",
    "plotly>=6.0.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "ruff>=0.9.4",
    "sphinx>=8.1.3",
]

[tool.setuptools]
packages = ["hilbert_bytes"]
